fixed the nav spacing issue

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -43,7 +43,7 @@ h1 {
 
 #top {
 	color: white;
-	margin-bottom: 30%;
+	margin-bottom: 40%;
 
 	nav.mobile {
 
